samples/_failures_safe/1761438442_58e5e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e1cbe39.c: In function ‘main’:
./samples/SAFE/__tmp_3e1cbe39.c:184:5: error: expected expression at end of input
  184 |     ctx.data_value =
      |     ^~~
./samples/SAFE/__tmp_3e1cbe39.c:184:5: error: expected declaration or statement at end of input
